src/core/config/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__cyclic_merge_case.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  q1: GEN__M1
  q2: GEN__M1
}

type GEN__M1 {
  body: String
  id: Int
  is_verified: Boolean
  t1: GEN__M1
  userId: Int
}
