src/core/config/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__fail_when_scalar_field_not_match.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
type T1 {
  a: Int
  b: Int
  c: Int
}

type T2 {
  a: Int
  b: Int
  c: String
}
