src/core/config/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__interface_types.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
interface M1 {
  a: Int
}

type C implements M1 {
  a: Int
}
