src/core/config/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__list_field_types.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream(httpCache: 42) {
  query: Query
}

type F2 {
  user: [User]
}

type F3 {
  user: User
}

type Query {
  user(id: Int!): F3 @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
  users: F2 @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
}
