src/core/config/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__merge_to_supertype.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type GEN__M1 {
  id: Int
  name: JSON
}

type Query {
  bar: GEN__M1
  foo: GEN__M1
}
