src/core/config/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__type_merger.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  q1: GEN__M1
  q2: GEN__M1
  q3: GEN__M1
  q4: GEN__M1
}

type GEN__M1 {
  f1: String
  f2: Int
  f3: Boolean
  f4: Float
  f5: ID
}
