src/core/config/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__union_types.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

union FooBar = Foo | GEN__M1

type Foo {
  a: String
  bar: String
  foo: String
}

type Query {
  foo: FooBar @http(url: "http://jsonplacheholder.typicode.com/foo")
}

type GEN__M1 {
  bar: String
}
